--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: "Inter", sans-serif;
   color: white;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 200;
   letter-spacing: inherit;
   height: 800px;
 }
@@ -30,8 +30,19 @@ p {
   font-size: 16px;
 }
 
+.social-icon {
+  width: 18px;
+  height: 18px;
+  padding-right: 10px;
+}
+/* box 1 refers to the first box in the flex container, box 2 is all the others */
 .box-1 {
   width: 320px;
+}
+.box-2 {
+  width: 158px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .flex-container {
@@ -39,10 +50,63 @@ p {
   flex-direction: row;
   justify-content: space-around;
   padding: 50 0 40 0;
+  max-width: 1140px;
+  margin: auto;
+}
+
+.inner-box-1 {
+  width: 308px;
+  height: 331px;
+  padding: 15px;
+}
+
+.inner-box-2 {
+  width: 158px;
+  height: 165px;
 }
 
 .copyright {
   text-align: center;
   font-size: 16px;
   font-weight: 100;
+}
+
+#svg-logo {
+  max-width: 300px;
+  max-height: 100px;
+}
+
+.emoji {
+  background-color: #ec0587;
+  padding: 2px 6px 3px;
+  font-size: 12px;
+  height: 12px;
+  border-radius: 3px;
+}
+
+.contact-link:hover {
+  color: white;
+}
+
+@media screen and (max-width: 1024px) {
+  .flex-container {
+    flex-wrap: wrap;
+  }
+  .box-1 {
+    width: 60%;
+  }
+  .box-2 {
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .flex-container {
+    flex-wrap: wrap;
+  }
+  .box-1 {
+    width: 100%;
+  }
+  .box-2 {
+    width: 100%;
+  }
 }
